--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.263.1",
     "next": "13.4.13",
+    "next-cloudinary": "^4.18.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
