--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "recharts": "^2.9.0",
     "sonner": "^0.6.2",
     "stripe": "^14.1.0",
     "tailwind-merge": "^1.14.0",
